@@ -3,6 +3,11 @@ X3 ChangeLog
 
 2009-10-05  Henrik Stuart <evilnet@hstuart.dk>
 
+	* src/mod-python.c: Expose Python services module as _svc to follow normal
+	Python naming conventions for C extensions.
+
+2009-10-05  Henrik Stuart <evilnet@hstuart.dk>
+
 	* src/mod-python.c: Remove unused function.
 
 2009-10-05  Henrik Stuart <evilnet@hstuart.dk>
